--- a/src/JokeList.css
+++ b/src/JokeList.css
@@ -1,4 +1,4 @@
-.JokeList {
+.JokeList {/*makes entire div display flex*/
     display: flex;
     width: 80%;
     height: 80%;
@@ -12,7 +12,7 @@
     width: 30%;
     text-align: center;
     box-shadow: 0 19 38px rgba(0,0,0,0.3), 0 15px 12px rgba(0,0,0) inset 0 0 25px #7e57c2;
-
+    z-index: 2;
 }
 .JokeList-title {
     font-size: 4rem;
