--- a/src/joke.css
+++ b/src/joke.css
@@ -21,6 +21,7 @@
   .Joke-votes {
       width: 50px;
       height: 50px;
+      
       line-height: 50px;
       border-radius: 50%;
       text-align: center;
@@ -34,6 +35,13 @@
       margin: 10px;
       cursor: pointer;
 
+  }
+
+  .Joke-smiley {
+      font-size: 3rem;
+      margin-left: auto;
+      border-radius: 50%;
+      box-shadow:  0 10 38px rgba(0, 0, 0, 0.2), 0 10px 12px rgba(0, 0, 0, 0.1);
   }
 
   
